--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -156,16 +156,33 @@ a {
 }
 
 .midi-btn {
+	position: relative;
 	display: inline-block;
 	background: white;
 	height: 17.5%;
     width: 17.5%;
     box-shadow: 0 0 0.5vh 0 rgba(0,0,0,1);
+    &::after {
+    	content: "";
+    	position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+    	background: transparent;
+    	box-shadow: 0 0 0 0 rgba(255,255,255,1);
+    	// transition: all .6s ease-out;
+    }
 }
 
-.midi-btn-active {
-	background: white !important;
-	box-shadow: 0 0 4vh 0 rgba(255,255,255,1);
+.midi-q {
+	// transition: all .6s ease-out;
+	&::after {
+		content: "";
+		background: white;
+		box-shadow: 0 0 4vh 0 rgba(255,255,255,1);
+		// transition: all 0s ease-in;
+	}
 }
 
 #horn1 {
