--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -137,6 +137,7 @@ a {
 }
 
 #midi-bg-inner {
+	position: relative;
 	display: flex;
     align-items: center;
     justify-content: center;
@@ -144,6 +145,74 @@ a {
 	height: 37vh;
 	width: 37vh;
 	box-shadow: inset 0 0 2vh 0 rgba(0,0,0,1);
+}
+
+.eq {
+	position: absolute;
+}
+
+#e1 {
+	top: 2%;
+	left: 2%;
+	width: 48%;
+	height: 1%;
+	background: linear-gradient(135deg, #ffdf00 0%,#ff7000 100%);
+}
+
+#e2 {
+	top: 2%;
+	right: 2%;
+	width: 48%;
+	height: 1%;
+	background: linear-gradient(135deg, #ff7000 0%,#ff0200 100%);
+}
+
+#e3 {
+	top: 2%;
+	right: 2%;
+	width: 1%;
+	height: 48%;
+	background: linear-gradient(135deg, #ff0200 0%,#94004e 100%);
+}
+
+#e4 {
+	bottom: 2%;
+	right: 2%;
+	width: 1%;
+	height: 48%;
+	background: linear-gradient(135deg, #94004e 0%,#28009c 100%);
+}
+
+#e5 {
+	bottom: 2%;
+	right: 2%;
+	width: 48%;
+	height: 1%;
+	background: linear-gradient(-135deg, #28009c 0%,#94004e 100%);
+}
+
+#e6 {
+	bottom: 2%;
+	left: 2%;
+	width: 48%;
+	height: 1%;
+	background: linear-gradient(-135deg, #94004e 0%,#ff0200 100%);
+}
+
+#e7 {
+	bottom: 2%;
+	left: 2%;
+	width: 1%;
+	height: 48%;
+	background: linear-gradient(135deg, #ff7000 0%,#ff0200 100%);
+}
+
+#e8 {
+	top: 2%;
+	left: 2%;
+	width: 1%;
+	height: 48%;
+	background: linear-gradient(135deg, #ffdf00 0%,#ff7000 100%);
 }
 
 #midi-btns {
