--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -67,15 +67,16 @@ a {
 }
 
 .p-container {
-	width: 40vh;
-	height: 40vh;
+	// width: 80vh;
+	// height: 80vh;
 	width: 0;
 	height: 0;
-	transform-origin: center;
+	// transform-origin: center;
 	position: absolute;
-	display: inline-block;
+	// display: inline-block;
 	transform: rotate(45deg);
 	// overflow: hidden;
+	// clip-path: polygon(50% 50%, 50% 50%, 50% 50%, 50% 50%);
 }
 
 .midi-pattern {
@@ -84,14 +85,14 @@ a {
 	width: 100%;
 	height: 100%;
 	// background-size: 100vh 100vh;
-	transform-origin: center;
-	position: absolute;
+	// transform-origin: center;
+	// position: absolute;
 	// transform: rotate(45deg);
 	background-color: white;
 	background-repeat: repeat;
 	// box-shadow: 0 0 6vh 0 rgba(0,0,0,1);
 	// animation: pattern 14.4s linear infinite;
-	background-attachment: fixed;
+	// background-attachment: fixed;
 }
 
 // @keyframes pattern {
@@ -103,7 +104,7 @@ a {
 // 	}
 // }
 
-#p1 {
+#p1, #p9 {
 	background-image: url('../../assets/images/patterns/pattern1.jpg');
 }
 
