--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -112,6 +112,7 @@ a {
 	// animation: pattern 2.4s linear infinite;
 	background-position: center center;
 	// background-attachment: fixed;
+	border-radius: 400vh;
 }
 
 @keyframes patternX {
