--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -503,6 +503,59 @@ a {
     transform: scale(0);
 }
 
+.s-leaf {
+	// background: red;
+	// border: 1px solid blue;
+	position: absolute;
+	opacity: 0.5;
+}
+
+#ls1 {
+	width: 42vh;
+    height: 33vh;
+    top: -192px;
+    left: -217px;
+    transform: rotate(51deg);
+}
+
+#ls2 {
+	width: 46vh;
+    height: 35vh;
+    top: 10px;
+    left: -320px;
+}
+
+#ls3 {
+	width: 48vh;
+    height: 29vh;
+    top: 247px;
+    left: -248px;
+    transform: rotate(-20deg);
+}
+
+#rs1 {
+	width: 48vh;
+    height: 33vh;
+    top: -180px;
+    right: -270px;
+    transform: rotate(-40deg);
+}
+
+#rs2 {
+	width: 44vh;
+    height: 34vh;
+    top: 10px;
+    right: -344px;
+}
+
+#rs3 {
+	width: 51vh;
+    height: 32vh;
+    top: 236px;
+    right: -288px;
+    transform: rotate(30deg);
+}
+
 
 
 
