--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,6 +1,13 @@
 /*=======================================
 	General
  =======================================*/
+ @font-face {
+    font-family: 'geared_slabregular';
+    src: url('../../assets/fonts/gearedslab-webfont.woff2') format('woff2'),
+         url('../../assets/fonts/gearedslab-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 // $grade-left: #3d5463;
 // $grade-left2: rgba(61, 84, 99, 0);
 // $grade-right: #e68c77;
@@ -18,21 +25,28 @@ body {
 	background-color: $c2;
 	color: #fff;
 	margin: 0;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 p {
 	font-size: 16px;
 	margin: 0;
+	line-height: 1.5;
+}
+
+h1, h2, h3 {
+	font-family: 'geared_slabregular';
+	margin: 0;
 }
 
 h1 {
 	font-size: 48px;
-	margin: 0;
+	text-transform: uppercase;
+	letter-spacing: 2px;
 }
 
 h2 {
 	font-size: 11px;
-	margin: 0;
 }
 
 ul {
@@ -53,9 +67,14 @@ a {
 =======================================*/
 
 
+
 /*=======================================
 	Home
 =======================================*/
+#home {
+	overflow-y: hidden;
+}
+
 #home-bg {
 	display: flex;
     justify-content: center;
@@ -556,9 +575,112 @@ a {
     transform: rotate(30deg);
 }
 
+/*=======================================
+	Bella
+=======================================*/
+#bella {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
 
+.info {
+	width: 50%;
+	height: 100%;
+	position: relative;
+	overflow: scroll;
+}
 
+.bio-pic {
+	width: 50%;
+	height: 100%;
+	background-image: url('../../assets/images/bella/profile.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: fixed;
+}
 
+.bio-grad {
+	width: 100%;
+	height: 100%;
+	background: linear-gradient(135deg, #fffc00 0%,#ff0000 50%,#0a00b2 100%);
+	mix-blend-mode: screen;
+	opacity: 0.9;
+	position: absolute;
+}
+
+.bio-content {
+	position: relative;
+	top: 66%;
+}
+
+.bio-bg {
+	height: 100%;
+	width: 100%;
+	position: absolute;
+	.bio-bg-fade {
+		position: relative;
+		background: linear-gradient(to bottom, rgba(17,24,46,0) 0%,rgba(17,24,46,1) 100%);
+		height: 50vh;
+    	width: 100%;
+    	top: -20%;
+	}
+	.bio-bg-block {
+		background: $c2;
+		position: relative;
+		top: -20%;
+		height: 60%;
+	}
+}
+
+.bio-title {
+	position: relative;
+	display: flex;
+	width: 100%;
+	justify-content: center;
+	.bio-line {
+		height: 1px;
+		width: 100%;
+		background: white;
+		position: absolute;
+		top: 49%;
+	}
+	.bio-name {
+		display: inline-block;
+		color: $c2;
+		background: white;
+		position: relative;
+		padding: 0 30px;
+		&::before {
+			content: "";
+			position: absolute;
+			top: 0;
+			left: -29px;
+			background-image: url('../../assets/images/left.svg');
+			background-repeat: no-repeat;
+			width: 50px;
+    		height: 100%;
+		}
+		&::after {
+			content: "";
+			position: absolute;
+			top: 0;
+			right: -49px;
+			background-image: url('../../assets/images/right.svg');
+			background-repeat: no-repeat;
+			width: 50px;
+    		height: 100%;
+		}
+	}
+}
+
+.bio-text {
+	position: relative;
+	padding: 40px 80px;
+}
 
 
 
