--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -593,6 +593,8 @@ a {
 	height: 100%;
 	position: relative;
 	overflow: scroll;
+	display: inline-block;
+	float: left;
 }
 
 .bio-pic {
@@ -625,13 +627,13 @@ a {
 	position: absolute;
 	.bio-bg-fade {
 		position: relative;
-		background: linear-gradient(to bottom, rgba(17,24,46,0) 0%,rgba(17,24,46,1) 100%);
+		background: linear-gradient(to bottom, rgba(17, 24, 46, 0) 0%, rgba(17, 24, 46, 0.9) 100%);
 		height: 50vh;
     	width: 100%;
     	top: -14%;
 	}
 	.bio-bg-block {
-		background: $c2;
+		background: rgba(17, 24, 46, 0.9);
 		position: relative;
 		top: -14%;
 		height: 80%;
@@ -701,6 +703,41 @@ a {
     	top: -11px;
     	opacity: 0.7;
 	}
+}
+
+.slider {
+	display: inline-block;
+    width: 50%;
+    overflow: hidden;
+    height: 100%;
+    float: left;
+    position: relative;
+}
+
+.carousel {
+	width: 100%;
+}
+
+.carousel-cell {
+	width: 100%;
+	position: relative;
+}
+
+.s-img {
+	width: 100%;
+	display: inline-block;
+	float: left;
+	user-drag: none; 
+	user-select: none;
+}
+
+.s-grad {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background: $c3;
+	mix-blend-mode: screen;
+	opacity: 0.5;
 }
 
 
