--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -33,6 +33,7 @@ p {
 	font-size: 16px;
 	margin: 0;
 	line-height: 1.5;
+	text-align: justify;
 }
 
 h1, h2, h3 {
@@ -705,7 +706,7 @@ a {
 	}
 }
 
-.slider {
+.slider-container {
 	display: inline-block;
     width: 50%;
     overflow: hidden;
@@ -714,30 +715,47 @@ a {
     position: relative;
 }
 
-.carousel {
-	width: 100%;
+.slide {
+	position: relative;
+	&:focus {
+		outline: none;
+	}
 }
 
-.carousel-cell {
-	width: 100%;
-	position: relative;
+.slick-current {
+	box-shadow: 0 0 6vh 0 rgba(17, 24, 46, 0.5);
+	z-index: 1;
+	overflow: hidden;
+	.s-grad {
+		opacity: 0;
+	}
+}
+
+.slick-track {
+	top: 16vh;
+}
+
+.slick-vertical {
+	.slick-slide {
+		border: none;
+		height: 66vh;
+	}
 }
 
 .s-img {
 	width: 100%;
 	display: inline-block;
-	float: left;
-	user-drag: none; 
-	user-select: none;
 }
 
 .s-grad {
 	position: absolute;
+	top: 0;
 	width: 100%;
 	height: 100%;
 	background: $c3;
 	mix-blend-mode: screen;
-	opacity: 0.5;
+	opacity: 0.7;
+	transition: all 0.25s ease-out;
 }
 
 
