--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -694,6 +694,25 @@ a {
     justify-content: center;
     margin: 60px 0;
     position: relative;
+    // h2 {
+    // 	box-shadow: 0 0 6vh 0 rgba(17, 24, 46, 0.5);
+    // }
+    .break-l {
+    	position: absolute;
+    	top: 50%;
+    	left: 15%;
+		width: 100px;
+		height: 1px;
+		background: white;
+    }
+    .break-r {
+    	position: absolute;
+    	top: 50%;
+    	right: 15%;
+		width: 100px;
+		height: 1px;
+		background: white;
+    }
 	.text-break-bg {
 		width: 50px;
 		height: 50px;
@@ -702,7 +721,7 @@ a {
 		mix-blend-mode: screen;
 		position: absolute;
     	top: -11px;
-    	opacity: 0.7;
+    	opacity: 1;
 	}
 }
 
