--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -128,7 +128,7 @@ a {
 	// transform-origin: center;
 	// position: absolute;
 	// transform: rotate(45deg);
-	background-color: white;
+	// background-color: white;
 	background-repeat: repeat;
 	// box-shadow: 0 0 6vh 0 rgba(0,0,0,1);
 	// animation: pattern 2.4s linear infinite;
@@ -159,44 +159,51 @@ a {
 	}
 }
 
+#p0 {
+	background-image: url('../../assets/images/patterns/pattern10.jpg');
+	background-size: 50%;
+	transform: rotate(45deg);
+	opacity: 0.2;
+}
+
 #p1, #p9 {
 	background-image: url('../../assets/images/patterns/pattern1.jpg');
-	animation: patternX 200s linear infinite;
+	animation: patternX 20s linear infinite;
 }
 
 #p2 {
 	background-image: url('../../assets/images/patterns/pattern2.jpg');
-	animation: patternY 200s linear infinite;
+	animation: patternY 20s linear infinite;
 }
 
 #p3 {
 	background-image: url('../../assets/images/patterns/pattern3.jpg');
-	animation: patternX 200s linear infinite;
+	animation: patternX 20s linear infinite;
 }
 
 #p4 {
 	background-image: url('../../assets/images/patterns/pattern4.jpg');
-	animation: patternY 200s linear infinite;
+	animation: patternY 20s linear infinite;
 }
 
 #p5 {
 	background-image: url('../../assets/images/patterns/pattern5.jpg');
-	animation: patternX 200s linear infinite;
+	animation: patternX 20s linear infinite;
 }
 
 #p6 {
 	background-image: url('../../assets/images/patterns/pattern6.jpg');
-	animation: patternY 200s linear infinite;
+	animation: patternY 20s linear infinite;
 }
 
 #p7 {
 	background-image: url('../../assets/images/patterns/pattern7.jpg');
-	animation: patternX 200s linear infinite;
+	animation: patternX 20s linear infinite;
 }
 
 #p8 {
 	background-image: url('../../assets/images/patterns/pattern8.jpg');
-	animation: patternY 200s linear infinite;
+	animation: patternY 20s linear infinite;
 }
 
 #midi-container {
@@ -637,6 +644,7 @@ a {
 	height: 100%;
 	width: 100%;
 	position: absolute;
+	opacity: 0;
 	.bio-bg-fade {
 		position: relative;
 		background: linear-gradient(to bottom, rgba(17, 24, 46, 0) 0%, rgba(17, 24, 46, 0.9) 100%);
