--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -586,9 +586,9 @@ a {
 }
 
 /*=======================================
-	Bella
+	Leafs
 =======================================*/
-#bella {
+#leaf {
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -617,7 +617,7 @@ a {
 .bio-pic {
 	width: 50%;
 	height: 100%;
-	background-image: url('../../assets/images/bella/profile.jpg');
+	// background-image: url('../../assets/images/bella/profile.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -771,6 +771,7 @@ a {
 
 .slide {
 	position: relative;
+	background-size: cover;
 	&:focus {
 		outline: none;
 	}
@@ -798,7 +799,12 @@ a {
 
 .s-img {
 	width: 100%;
+	height: 100%;
 	display: inline-block;
+}
+
+.s-img-rotate {
+	transform:rotate(90deg);
 }
 
 .s-grad {
@@ -842,7 +848,135 @@ a {
 	}
 }
 
+#b-bella {
+	background-image: url('../../assets/images/bella/profile.jpg');
+}
+.s1-1 {
+	background-image: url('../../assets/images/bella/s1-1.jpg');
+}
+.s1-2 {
+	background-image: url('../../assets/images/bella/s1-2.jpg');
+}
+.s1-3 {
+	background-image: url('../../assets/images/bella/s1-3.jpg');
+}
+.s1-4 {
+	background-image: url('../../assets/images/bella/s1-4.jpg');
+}
+.s1-5 {
+	background-image: url('../../assets/images/bella/s1-5.jpg');
+}
+.s1-6 {
+	background-image: url('../../assets/images/bella/s1-6.jpg');
+}
+.s1-7 {
+	background-image: url('../../assets/images/bella/s1-7.jpg');
+}
+.s1-8 {
+	background-image: url('../../assets/images/bella/s1-8.jpg');
+}
+.s1-9 {
+	background-image: url('../../assets/images/bella/s1-9.jpg');
+}
+.s1-10 {
+	background-image: url('../../assets/images/bella/s1-10.jpg');
+}
+.s1-11 {
+	background-image: url('../../assets/images/bella/s1-11.jpg');
+}
+.s1-12 {
+	background-image: url('../../assets/images/bella/s1-12.jpg');
+}
+.s1-13 {
+	background-image: url('../../assets/images/bella/s1-13.jpg');
+}
+.s1-14 {
+	background-image: url('../../assets/images/bella/s1-14.jpg');
+}
+.s1-15 {
+	background-image: url('../../assets/images/bella/s1-15.jpg');
+}
+.s1-16 {
+	background-image: url('../../assets/images/bella/s1-16.jpg');
+}
+.s1-17 {
+	background-image: url('../../assets/images/bella/s1-17.jpg');
+}
+.s1-18 {
+	background-image: url('../../assets/images/bella/s1-18.jpg');
+}
+.s1-19 {
+	background-image: url('../../assets/images/bella/s1-19.jpg');
+}
+.s1-20 {
+	background-image: url('../../assets/images/bella/s1-20.jpg');
+}
+.s1-21 {
+	background-image: url('../../assets/images/bella/s1-21.jpg');
+}
+.s1-4 {
+	background-image: url('../../assets/images/bella/s1-4.jpg');
+}
+.s1-5 {
+	background-image: url('../../assets/images/bella/s1-5.jpg');
+}
+.s1-6 {
+	background-image: url('../../assets/images/bella/s1-6.jpg');
+}
 
+
+
+
+.s2-1 {
+	background-image: url('../../assets/images/pete/s2-1.jpg');
+}
+.s2-2 {
+	background-image: url('../../assets/images/pete/s2-2.jpg');
+}
+.s2-3 {
+	background-image: url('../../assets/images/pete/s2-3.jpg');
+}
+.s2-4 {
+	background-image: url('../../assets/images/pete/s2-4.jpg');
+}
+.s2-5 {
+	background-image: url('../../assets/images/pete/s2-5.jpg');
+}
+.s2-6 {
+	background-image: url('../../assets/images/pete/s2-6.jpg');
+}
+.s2-7 {
+	background-image: url('../../assets/images/pete/s2-7.jpg');
+}
+.s2-8 {
+	background-image: url('../../assets/images/pete/s2-8.jpg');
+}
+
+
+
+
+
+#b-richard {
+	background-image: url('../../assets/images/richard/profile.jpg');
+}
+.s3-1 {
+	background-image: url('../../assets/images/richard/s3-1.jpg');
+}
+.s3-2 {
+	background-image: url('../../assets/images/richard/s3-2.jpg');
+}
+.s3-3 {
+	background-image: url('../../assets/images/richard/s3-3.jpg');
+}
+.s3-4 {
+	background-image: url('../../assets/images/richard/s3-4.jpg');
+}
+.s3-5 {
+	background-image: url('../../assets/images/richard/s3-5.jpg');
+}
+.s3-6 {
+	background-image: url('../../assets/images/richard/s3-6.jpg');
+}
 
 
 
