--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -656,7 +656,7 @@ a {
 		background: rgba(17, 24, 46, 0.9);
 		position: relative;
 		top: -14%;
-		height: 80%;
+		height: 90%;
 	}
 }
 
@@ -978,6 +978,28 @@ a {
 	background-image: url('../../assets/images/richard/s3-6.jpg');
 }
 
+
+#b-x {
+	background-image: url('../../assets/images/x/profile.jpg');
+}
+.s6-1 {
+	background-image: url('../../assets/images/x/s6-1.jpg');
+}
+.s6-2 {
+	background-image: url('../../assets/images/x/s6-2.jpg');
+}
+.s6-3 {
+	background-image: url('../../assets/images/x/s6-3.jpg');
+}
+.s6-4 {
+	background-image: url('../../assets/images/x/s6-4.jpg');
+}
+.s6-5 {
+	background-image: url('../../assets/images/x/s6-5.jpg');
+}
+.s6-6 {
+	background-image: url('../../assets/images/x/s6-6.jpg');
+}
 
 
 
